--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-sliding-pane": "^7.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
