--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
         "express": "^4.17.1",
         "g": "^2.0.1",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.12"
+        "nodemon": "^2.0.12",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0"
     }
 }
