--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "mysql": "^2.18.1",
         "nodemon": "^2.0.12",
         "passport": "^0.4.1",
-        "passport-local": "^1.0.0"
+        "passport-local": "^1.0.0",
+        "router": "^1.3.5"
     }
 }
