--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
         "axios": "^0.21.4",
         "bootstrap": "^5.1.0",
         "framer-motion": "^4.1.17",
+        "nodemon": "^2.0.13",
         "npm": "^7.22.0",
         "react": "^17.0.2",
         "react-bootstrap": "^2.0.0-beta.6",
+        "react-cookie": "^4.1.1",
         "react-dom": "^17.0.2",
         "react-reveal": "^1.2.2",
         "react-router-dom": "^5.3.0",
