--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,13 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "connect-flash": "^0.1.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
+        "flash": "^1.1.0",
         "g": "^2.0.1",
         "mysql": "^2.18.1",
         "nodemon": "^2.0.12",
