--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
         "react-dom": "^17.0.2",
         "react-reveal": "^1.2.2",
         "react-router-dom": "^5.3.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^4.0.3",
         "react-slick": "^0.28.1",
         "react-sliding-pane": "^7.0.0",
         "slick-carousel": "^1.8.1",
