--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
+        "express-validator": "^6.12.2",
         "flash": "^1.1.0",
         "g": "^2.0.1",
         "mysql": "^2.18.1",
