--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
         "@fortawesome/react-fontawesome": "^0.1.15",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.11.2",
+        "@stripe/react-stripe-js": "^1.6.0",
+        "@stripe/stripe-js": "^1.19.1",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
