--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,14 @@
     "main": "index.js",
     "scripts": {
         "start": "node app.js",
-        "devStart": "nodemon index.js",
+        "devStart": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "body-parser": "^1.19.0",
         "connect-flash": "^0.1.1",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
@@ -21,9 +22,10 @@
         "flash": "^1.1.0",
         "g": "^2.0.1",
         "mysql": "^2.18.1",
-        "nodemon": "^2.0.12",
+        "nodemon": "^2.0.13",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
-        "router": "^1.3.5"
+        "router": "^1.3.5",
+        "stripe": "^8.181.0"
     }
 }
