--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "react-bootstrap": "^2.0.0-beta.6",
         "react-cookie": "^4.1.1",
         "react-dom": "^17.0.2",
+        "react-paystack": "^3.0.5",
         "react-reveal": "^1.2.2",
         "react-router-dom": "^5.3.0",
         "react-scripts": "^4.0.3",
@@ -29,7 +30,7 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "set PORT=3001 && react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
