--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
         "router": "^1.3.5",
-        "stripe": "^8.181.0"
+        "stripe": "^8.181.0",
+        "uuidv4": "^6.2.12"
     }
 }
